Fixed Spacing for Search Results

--- a/css/app.css
+++ b/css/app.css
@@ -24,7 +24,7 @@ header {
 }
 
 main {
-    margin-top: 245px;
+    margin-top: 340px;
 }
 
 .well {
